SimGrid (3.5) unstable; urgency=low

 XBT
 * New data container: setset (set of sets of elements)
 * New module: mmalloc (mapped malloc)
 * New function: xbt_dict_cursor_set_data()
 * New function: xbt_fifo_get_last_item()
 * Bug fix in xbt_dynar_shrink(): use the right element size

 -- Da SimGrid team <simgrid-devel@lists.gforge.inria.fr> 

SimGrid (3.4.1) stable; urgency=low

 The "Polishing easter eggs is probably a good idea" release.
 This is a bug fixes release only.
 

 Java Bindings
 * Fix a bug preventing the tasks from begin garbage collected.

 MSG
 * Fix a bug occuring when a host involved in a communication fails.
   This was not detected properly by the other peer involved in the
   communication. Now, it's reported as a network error.

 SimDag
 * Warn the user about loop dependencies in data flow of DAX files
 * Obey the control-flow dependencies of DAX files

 Cmake
 * Add option "enable_smpi" allowing to not compile SMPI. 
   Probably useful for the (Mac) users experiencing a build error here
 * Improve the detection of lua5.1 and ruby1.8

 -- Da SimGrid team <simgrid-devel@lists.gforge.inria.fr> Tus, 04 May 2010 28 16:11:16 +0100

SimGrid (3.4) stable; urgency=low

 The "Easter in Cargese" release. Also known as (major changes):
 
  * the "se habla Java, Ruby 話せます, fala-se Lua (and deaf-friendly)"
    ~> bindings were greatly improved
    ~> new tracing infrastructure for better visualization introduced
    
  * the "Welcome to configury modernity" release.
    ~> we switched from autotools to cmake, and improved our cdash


 A more detailled list of changes follow (full detail in svn log).

 Java Bindings: Various Cleanups
  * (install java-gcj-compat-dev on debian-like to use them)
  * Remove put/get: no need to export deprecated interface in Java
    Use send/receive instead.
  * Cleanup the examples and add a README per directory
  * Remove example autoDestination (that's the only way to go now)