@@ -17,11 +17,11 @@
 extern char **environ;          /* the environment, as specified by the opengroup */
 
 /* Module creation/destruction: nothing to do on linux */
-void xbt_backtrace_init(void)
+void xbt_backtrace_preinit(void)
 {
 }
 
-void xbt_backtrace_exit(void)
+void xbt_backtrace_postexit(void)
 {
 }
 
